Prep Database & Firebase

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 GENERATE_SOURCEMAP=false
+
+REACT_APP_FIREBASE_API_KEY=AIzaSyDlZASZ42EvVr_NJvpv_TpjbqvrxReTYtI
+REACT_APP_FIREBASE_AUTH_DOMAIN=laporkeun-apps.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=laporkeun-apps
+REACT_APP_FIREBASE_STORAGE_BUCKET=laporkeun-apps.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=936627421139
+REACT_APP_FIREBASE_APP_ID=1:936627421139:web:554d8af9fb32ebd568b926
