--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "easy-peasy": "^5.0.3",
+    "firebase": "^8.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
