--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "easy-peasy": "^5.0.3",
     "firebase": "^8.3.1",
+    "jspdf": "^2.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
