--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "laporkeun-client",
   "version": "0.1.0",
   "private": true,
+  "repository": { 
+    "type": "git",
+		"url": "https://github.com/DrDhemm/laporkeun-client"
+  },
   "dependencies": {
     "@hookform/resolvers": "^1.3.5",
     "@hookstate/core": "^3.0.7",
