--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hookform/resolvers": "^1.3.5",
     "@hookstate/core": "^3.0.7",
     "@hookstate/persistence": "^3.0.0",
+    "@seznam/compose-react-refs": "^1.0.6",
     "axios": "^0.21.1",
     "firebase": "^8.3.1",
     "jspdf": "^2.3.1",
