Testing form reset, img resize, and file download

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@seznam/compose-react-refs": "^1.0.6",
     "axios": "^0.21.1",
     "firebase": "^8.3.1",
+    "js-file-download": "^0.4.12",
     "jspdf": "^2.3.1",
     "md5": "^2.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
     "react-hot-toast": "^1.0.2",
+    "react-image-file-resizer": "^0.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
