--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^6.15.5",
     "react-hot-toast": "^1.0.2",
     "react-image-file-resizer": "^0.4.4",
+    "react-intersection-observer": "^8.32.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
